--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,9 @@ jobs:
       - name: Restore
         run: dotnet restore
 
-      - name: Vulnerability scan (NuGet)
-        run: dotnet list package --vulnerable --include-transitive
+      - name: Vulnerability scan (NuGet with thresholds)
+        shell: pwsh
+        run: ./scripts/check-vulnerabilities.ps1
 
       - name: Run unit tests with coverage
         run: |
